src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
  --main-color: #b2c3bd;
  --dark-green: #1c3941;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 39, 79, 91;
    --background-end-rgb: 28, 57, 65;
  }
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

* {
  box-sizing: border-box;
}

body {
  color: rgb(var(--foreground-rgb));
  background: #000;
}

html.no-scroll {
  max-height: 100vh;
  max-height: 100dvh;
  overflow: hidden;
}

.main-color {
  color: var(--main-color);
}

.bg-dark-green {
  background-color: var(--dark-green);
}

header {
  z-index: 10;
  height: 75px;
  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
}

header .menu {
  height: 40px;
  overflow: hidden;
  margin-bottom: 10px;

  &:hover {
    .line {
      animation-play-state: running;
    }
  }
}

#main-logo {
  display: block;
  height: auto;
}

main {
  margin-top: -75px;
}

.line {
  width: 6px;
  background-color: var(--main-color);
}

.left-line {
  height: 15px;
  animation: left-line-anim 1.5s infinite;
  animation-play-state: paused;
}

.center-line {
  height: 35px;
  animation: center-line-anim 1.5s infinite;
  animation-play-state: paused;
}

.right-line {
  height: 25px;
  animation: right-line-anim 1.5s infinite;
  animation-play-state: paused;
}

@keyframes left-line-anim {
  0%,
  100% {
    height: 15px;
  }

  25% {
    height: 25px;
  }

  50% {
    height: 35px;
  }

  75% {
    height: 25px;
  }
}

@keyframes center-line-anim {
  0%,
  100% {
    height: 35px;
  }

  25% {
    height: 15px;
  }

  50% {
    height: 5px;
  }

  75% {
    height: 15px;
  }
}

@keyframes right-line-anim {
  0%,
  100% {
    height: 25px;
  }

  25% {
    height: 35px;
  }

  50% {
    height: 15px;
  }

  75% {
    height: 35px;
  }
}

#side-drawer {
  position: fixed;
  inset: 0;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 19;
  filter: blue(5px);
  transform: translateX(100%);
  height: 100vh;
  height: 100dvh;
  transition: all 0.2s ease;

  &.active {
    transform: translateX(0);
  }
}

.glitch-logo {
  width: 150px;
  height: 103px;
  /* width: 200px;
  height: 155px; */
  background-image: url(/main-logo.png);
  background-size: cover;
  animation: glitch 1.5s infinite steps(1);
}

@keyframes glitch {
  0%,
  100% {
    background-image: url(/main-logo.png);
  }
  92.5% {
    background-image: url(/glitch-1.png);
    opacity: 1;
  }
  95% {
    background-image: url(/glitch-2.png);
    opacity: 0;
  }
  97.5% {
    background-image: url(/glitch-3.png);
    opacity: 1;
  }
}

.song-ctn {
  width: 100%;
  min-height: 400px;
}

.song-ctn:last-child {
  margin-bottom: 0;
}

.card {
  width: 700px;
  height: 400px;
  transform-style: preserve-3d;
  /* position: absolute;
  left: calc(50% - 350px);
  top: calc(50% - 200px); */
  transition: transform 400ms ease;
  cursor: pointer;

  .img-ctn {
    height: 260px;
  }
}

#credit-ctn {
  height: 260px;
}

.color-overlay {
  z-index: -1;
}

.card.active {
  z-index: 15 !important;
  scale: 1;
}

.card-title {
  opacity: 1;
  transition: opacity 0.4s ease;
  bottom: 40px;
  right: 5px;
  p {
    transform: rotate(-90deg);
  }
}

.credit-body {
  max-width: 260px;
}

.credit-body .bottom {
  height: 40px;
}

#slide-0.active ~ #slide-1 {
  transform: translate3d(11%, 0px, -100px) scale(0.9);
}

#slide-0.active ~ #slide-2,
#slide-1.active ~ #slide-2 {
  transform: translate3d(21%, 0px, -200px) scale(0.8);
}

#slide-0.active ~ #slide-3,
#slide-1.active ~ #slide-3,
#slide-2.active ~ #slide-3 {
  transform: translate3d(31%, 0px, -300px) scale(0.7);
}

#slide-0:has(+ .active),
#slide-0:has(~ .active) {
  transform: translate3d(11%, 0px, -100px) scale(0.9);
  z-index: 9;
}

#slide-1:has(~ .active) {
  transform: translate3d(21%, 0px, -200px) scale(0.8);
  z-index: 8;
}

#slide-2:has(+ .active) {
  transform: translate3d(31%, 0px, -300px) scale(0.7);
  z-index: 7;
}

.card.active .card-title {
  opacity: 0;
}

#footer {
  overflow: hidden;
  background-color: #16282c;
  /* min-height: 650px; */
  background-image: url(/footer-bg.svg);
  background-repeat: no-repeat;
  background-position: center top;
  background-size: cover;
}

#footer-widgets a > svg {
  display: block;
  width: 100%;
  height: 100%;
}

.sign-form-placeholder {
  height: 50px;
  width: 100%;
  max-width: 400px;
  background-color: var(--main-color);
  border-radius: 15px;
}

.shout {
  height: 100vh;
}

.shout h1 {
  background-image: url(https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMDRiN2UzbDlrYmpqejFkNXY3czNvNXUycnp1NWQxbHFvdHh4MWwxMiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xThuWlT47FLpqr1giY/giphy.gif);
  background-size: contain;
  color: transparent;
  -moz-background-clip: text;
  -webkit-background-clip: text;
  max-width: max-content;
}

#waveform-ctn {
  min-width: 250px;
}

#play-btn svg {
  color: #93feff;
  width: 30px;
  height: 30px;
  margin-right: 10px;
}

@media screen and (max-width: 767px) {
  #hero-img {
    height: 100vh;
    height: 100svh;
    object-fit: cover;
    object-position: 67% center;
  }

  header {
    background: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.9),
      rgba(0, 0, 0, 0)
    );
  }

  #hero-body-ctn {
    background: linear-gradient(to bottom, transparent, #0b0b0b);
    /* padding: 50px 4.15% 25px; */
  }
}

@media screen and (max-width: 1023px) {
  #hero-body-ctn {
    padding: 50px 4.15% 25px;
  }
}

@media screen and (min-width: 768px) {
  #hero-img {
    height: 80vh;
    object-fit: cover;
    object-position: center;
  }
}

@media screen and (max-width: 1023px) {
  .signup-form h4 {
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (min-width: 1024px) {
  .signup-form,
  .song-links {
    flex-grow: 2;
    flex-shrink: 1;
    flex-basis: 0;
  }
  .social {
    flex-grow: 1;
    flex-shrink: 1;
  }
  .sign-form-placeholder {
    max-width: 330px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1279px) {
  #footer {
    background-position: 0 top;
  }
}

@media screen and (min-width: 1280px) and (max-width: 1535px) {
  #footer {
    background-position: 60px top;
  }
}

@media screen and (min-width: 1536px) {
  #footer {
    background-position: 150px top;
  }
}

